[tool.poetry]
name = "task-tracker"
version = "0.1.0"
description = ""
authors = ["Joseph Perez <24216045+Joseph-Student@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
